------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Mon Feb 15 16:47 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Commented mm diagnostic functions.

Fri Feb 12 16:35 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Trimmed block request code.

Sun Jan 31 17:50 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fix main.c so init is launched with a valid set of argvs.

	* Fix ntty.c so tty driver ioctls are called.

Sat Dec 06 00:24 GMT 1998   Alastair Bridgewater  <nyef@softhome.net>

	* Fixed arch/i86/lib/Makefile to rebuild setup[bw].s when nessecary.

Wed Thu 03 17:12 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Tweaked docs for 0.0.74

Wed Thu 03 17:12 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Debugged minix filesystem, so that removing files now
	  works correctly, and the filesystem no longer gets corrupted.

Wed Nov 19 18:22 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added Riley Williams changes to bootsect.S to fix a bug and tidy
	  up the code.

Wed Nov 19 17:51 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added latest changes to 286 pmode code by
	  Alastair Bridgewater. Include change to the code that detects
	  when the kernel is restarted so it no longer has to modify its own
	  code segment.

Wed Nov 19 17:39 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fix to minix truncate code. See BUGS.

Tue Nov 18 11:42 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Tweaked select so it now passes 5 parameters in the normal way.

Thu Nov 18 15:00 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Some more updates to config scripts made in conjunction with
	  Riley Williams.

Thu Nov 18 14:31 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
