@@ -4,6 +4,10 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Mon Feb 15 16:56 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+	
+	* Added alpha code for shared libraries.
+
 Mon Feb 15 16:47 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Commented mm diagnostic functions.
